@@ -131,8 +131,16 @@ class ImageScalingTests(NamedFileTestCase):
             r'alt="foo" title="foo" height="(\d+)" width="(\d+)" />' % base
         self.assertTrue(re.match(expected, tag).groups())
     
-    def testScaleOnItemWithNonASCIITitle(self):
+    def testScaleOnItemWithNonASCIIEncodedTitle(self):
         self.item.title = '\xc3\xbc'
+        tag = self.scaling.tag('image')
+        base = self.item.absolute_url()
+        expected = r'<img src="%s/@@images/([-0-9a-f]{36}).(jpeg|gif|png)" ' \
+            r'alt="\xfc" title="\xfc" height="(\d+)" width="(\d+)" />' % base
+        self.assertTrue(re.match(expected, tag).groups())
+
+    def testScaleOnItemWithNonASCIIUnicodeTitle(self):
+        self.item.title = '\xc3\xbc'.decode('utf8')
         tag = self.scaling.tag('image')
         base = self.item.absolute_url()
         expected = r'<img src="%s/@@images/([-0-9a-f]{36}).(jpeg|gif|png)" ' \
